// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test item check answer should return an action 1`] = `
Object {
  "type": "[testItem] evaluate test item",
}
`;

exports[`test item create test item should return an action 1`] = `
Object {
  "payload": Object {
    "rows": Array [
      Object {
        "dimension": "100%",
        "tabs": Array [],
        "widgets": Array [],
      },
    ],
  },
  "type": "[testItem] create item request",
}
`;

exports[`test item create test item should return an action 2`] = `
Object {
  "payload": Object {
    "columns": Array [],
    "rows": Array [
      Object {
        "dimension": "100%",
        "tabs": Array [],
        "widgets": Array [
          Object {
            "reference": "5c0f0c9ed8c7f4453f5bb51f",
            "tabIndex": 0,
            "title": "Multiple choice",
            "type": "multipleChoice",
            "widgetType": "question",
          },
        ],
      },
    ],
  },
  "type": "[testItem] create item request",
}
`;

exports[`test item show answer should return an action 1`] = `
Object {
  "type": "[testItem] show test item answer",
}
`;

exports[`test item update test item by id should return an action 1`] = `
Object {
  "payload": Object {
    "data": Object {
      "rows": Array [
        Object {
          "dimension": "100%",
          "tabs": Array [],
          "widgets": Array [],
        },
      ],
    },
    "id": 1,
  },
  "type": "[testItem] update by id request",
}
`;

exports[`test item update test item by id should return an action 2`] = `
Object {
  "payload": Object {
    "data": Object {
      "columns": Array [],
      "rows": Array [
        Object {
          "dimension": "100%",
          "tabs": Array [],
          "widgets": Array [
            Object {
              "reference": "5c0f0c9ed8c7f4453f5bb51f",
              "tabIndex": 0,
              "title": "Multiple choice",
              "type": "multipleChoice",
              "widgetType": "question",
            },
          ],
        },
      ],
    },
    "id": 2,
  },
  "type": "[testItem] update by id request",
}
`;
